minifests/ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  type: LoadBalancer
  selector:
    app: ui
  ports:
  - port: 9999
    targetPort: 80
