minifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/time"
        backend:
          service:
            name: api
            port: 
              number: 7262
      - pathType: Prefix
        path: "/time/hi"
        backend:
          service:
            name: clock
            port: 
              number: 8080
      - pathType: Prefix
        path: "/count"
        backend:
          service:
            name: api
            port:
              number: 7262
      - pathType: Prefix
        path: "/" 
        backend:
          service:
            name: ui
            port:
              number: 9999



# URL  https://www.jsonplaceholder.typicode.com/posts/3
#      {       Host                           }{   URI   } o-data

# https://www.jsonplaceholder.typicode.com/
# https://www.jsonplaceholder.typicode.com/time
